# Educhat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/memory/: MEMORY.md  user_role.md
backend/: pyproject.toml
backend/apps/users/: models.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/views/: google_login_signup.py
backend/educhat/: settings.py  urls.py
educhat/: .gitignore  CLAUDE.md  CONTRIBUTORS.txt  LICENSE  README.md  asgi.py  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml  settings.py  wsgi.py
educhat/.devcontainer/: devcontainer.json
educhat/.envs/.local/: .postgres
educhat/compose/production/django/: Dockerfile
educhat/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
educhat/config/settings/: base.py  local.py  production.py  test.py
educhat/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
educhat/educhat/: conftest.py
educhat/educhat/templates/: base.html
educhat/educhat/users/: adapters.py  apps.py  models.py  views.py
educhat/educhat/users/api/: serializers.py  (+1 more)
frontend/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/: AudioPage.tsx  AuthSuccessPage.tsx  ChatPage.tsx  DashboardPage.tsx  FilesPage.tsx  LoginPage.tsx  MindMapPage.tsx  QuizPage.tsx  SubjectSelectionPage.tsx
frontend/src/stores/: authStore.ts  chatStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  constants.ts  helpers.ts
(+23 files in other folders)
