[project]
name = "educhat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-auth>=2.49.1",
    "pgvector>=0.4.2",
    "pydantic-ai>=1.78.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
